--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -18,6 +18,7 @@
   background: linear-gradient(180deg, #ffff 0%, rgb(0, 0, 0) 100%);
   opacity: 0.2;
   position: absolute;
+  border-radius: 10px;
 }
 .card-linearGradient:nth-child(10) {
   display: none;
@@ -26,7 +27,7 @@
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  height: 30%;
+  height: 10%;
   padding: 30px;
   position: relative;
   align-items: center;
