--- a/src/Components/Collapse/Collapse.css
+++ b/src/Components/Collapse/Collapse.css
@@ -1,20 +1,31 @@
-.collapse-container {
-  width: 100%;
-  margin-bottom: 25px;
+.collapse-bloc {
   display: flex;
   flex-direction: column;
+  align-content: center;
+  align-items: center;
+  padding: 0 20%;
+}
+
+.collapse-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin: 25px 0;
+  text-align: center;
 }
 .collapse-title {
-  width: 100%;
-  height: 50px;
-  background-color: #ff6060;
-  border-radius: 5px;
-  padding: 20px;
-  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-radius: 5px;
+  background-color: #ff6060;
+  color: #fff;
+  font-weight: 500;
   cursor: pointer;
+  width: 100%;
+  padding: 20px 10px;
+  height: 47px;
 }
 
 .collapse-title h2 {
@@ -54,6 +65,7 @@
   }
   .collapse-title h2 {
     font-size: 13px;
+    font-weight: 500;
   }
   .collapse-title img {
     width: 15px;
