--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,9 +1,15 @@
 .footer-container {
   width: 100%;
-  height: 200px;
+  height: 140px;
   background-color: black;
-  padding: 50px 0px 30px 0px;
+  padding: 30px 0px 30px 0px;
   text-align: center;
+  /* footer 하단 고정 */
+  margin-top: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer-logo img {
@@ -22,7 +28,8 @@
 }
 @media screen and (max-width: 768px) {
   .footer-container {
-    height: 120px;
+    width: 100%;
+    height: 209px;
     padding: 30px 0px 20px 0px;
   }
   .footer-logo img {
