--- a/src/pages/Error/Error.css
+++ b/src/pages/Error/Error.css
@@ -13,7 +13,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-body: center;
+  justify-content: center;
 }
 .error-body h2 {
   font-size: 300px;
@@ -24,9 +24,10 @@
   color: #ff6060;
   margin-bottom: 150px;
 }
-.error-body a {
+.errortoMainPage {
   color: #ff6060;
   font-size: 20px;
+  margin-bottom: 5%;
 }
 
 @media screen and (max-width: 1024px) {
@@ -40,6 +41,7 @@
   }
   .error-body h2 {
     font-size: 96px;
+    font-weight: 700;
   }
   .error-body p {
     font-size: 18px;
