--- a/src/Components/Lodging/Lodging.css
+++ b/src/Components/Lodging/Lodging.css
@@ -49,9 +49,14 @@
     height: 255px;
     border-radius: 10px;
   }
+  .slideshowImgNumber {
+    display: none;
+  }
 
   .LeftArrow,
   .RightArrow {
-    display: none;
+    width: 12px;
+    height: 20px;
+    top: 45%;
   }
 }
