--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -32,6 +32,7 @@
   position: relative;
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 .banner h2 {
@@ -54,7 +55,7 @@
 }
 @media screen and (max-width: 768px) {
   .banner {
-    height: 120px;
+    height: 140px;
     padding: 0 10px;
   }
 
@@ -64,9 +65,13 @@
 
   .banner .background {
     width: 100%;
-    height: 140px;
+    height: 180px;
     white-space: normal;
     border-radius: 25px;
+
+    /* Modification */
+    margin-top: 100px;
+    margin-bottom: 50px;
   }
 
   .bannerImg {
